examples/test/testpolicy10373.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10373
  namespace: namespace178
spec:
  podSelector:
    matchLabels:
      key27: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value42
          key33: value17
          key43: value0
      podSelector:
        matchLabels:
          key26: value39
          key7: value43
